@@ -4,8 +4,8 @@ jEdit 4.4 version history
 {{{ Version 4.4pre1
 
 Thanks to Björn "Vampire" Kautler, Alan Ezust, Eric Berry, Shlomy
-Reinstein, Damien Radtke, Dale Anson, Eric Le Lay and Bernhard Walle for
-contributing to this release.
+Reinstein, Damien Radtke, Dale Anson, Matthieu Casanova, Eric Le Lay and 
+Bernhard Walle for contributing to this release.
 
 {{{ Bug fixes
 
@@ -47,6 +47,9 @@ contributing to this release.
 - Implemented feature request #2919875: Namable views. You can now specify a
   name for each view using View -> Set view title. The name is persistent in the
   perspective.xml file.
+  
+- In Hypersearchs result panel, the query string length is now limited to 100
+  chars by default for display (Matthieu Casanova)
 
 }}}
 }}}
